<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>pl.execon.common</groupId>
    <artifactId>fsp</artifactId>
    <packaging>pom</packaging>
    <version>0.1.0</version>
    <modules>
        <module>fsp-model</module>
        <module>fsp-adapters</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <maven.compiler.source>8</maven.compiler.source>
        <maven.compiler.target>8</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!--        MODULES VERSIONS  -->
        <fsp-model.version>0.1.0</fsp-model.version>
        <fsp-mongo.version>0.1.0</fsp-mongo.version>
        <!--        LIBRARIES VERSIONS  -->
        <lombok.version>1.18.24</lombok.version>
        <!--        TEST LIBRARIES VERSIONS  -->
        <junit.version>5.8.2</junit.version>
        <spring-boot.version>2.0.5.RELEASE</spring-boot.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <!--        MODULES  -->
            <dependency>
                <groupId>pl.execon.common</groupId>
                <artifactId>fsp-model</artifactId>
                <version>${fsp-model.version}</version>
            </dependency>
            <dependency>
                <groupId>pl.execon.common</groupId>
                <artifactId>fsp-mongo</artifactId>
                <version>${fsp-mongo.version}</version>
            </dependency>

            <!--        LIBRARIES  -->
            <dependency>
                <groupId>org.projectlombok</groupId>
                <artifactId>lombok</artifactId>
                <version>${lombok.version}</version>
            </dependency>
            <!--        TEST LIBRARIES  -->
            <dependency>
                <groupId>org.junit.jupiter</groupId>
                <artifactId>junit-jupiter</artifactId>
                <version>${junit.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-test</artifactId>
                <version>${spring-boot.version}</version>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-jpa</artifactId>
                <version>${spring-boot.version}</version>
                <scope>provided</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-starter-data-mongodb</artifactId>
                <version>${spring-boot.version}</version>
                <scope>provided</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

</project>
